# auth_diploma

./: .env.example  .env.test  .pre-commit-config.yaml  Makefile  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: main.yaml
entrypoints/: start.sh
src/app/: config.py  container.py
src/app/application/entities/: permission.py  role.py  user.py
src/app/application/enums/: user_sort_by.py
src/app/application/interfaces/crypto/: password_cryptografer.py
src/app/infra/alembic/: env.py
src/app/infra/crypto/: password_cryptografer.py
src/app/infra/email/: email_sender.py
src/app/infra/jwt/: jwt_encoder.py
src/app/infra/unit_of_work/: sqla.py
src/app/presentation/rest/: main.py
src/templates/mail/: password_reset.html  verify_email.html
src/tests/: conftest.py
src/tests/alembic/: test_alembic.py
src/tests/e2e/: conftest.py
src/tests/e2e/permissions/: conftest.py
src/tests/e2e/roles/: conftest.py
src/tests/e2e/roles_permissions/: conftest.py
src/tests/e2e/users/: conftest.py
src/tests/environment/: config.py
src/tests/environment/crypto/: password_cryptografer.py
src/tests/environment/email/: email_sender.py
src/tests/environment/jwt/: jwt_encoder.py
src/tests/environment/repositories/: permissions.py  roles.py  roles_permissions.py  users.py
src/tests/environment/uow/: unit_of_work.py
src/tests/unit/jwt/: conftest.py  test_jwt_access_encode.py  test_jwt_refresh_encode.py  test_jwt_reset_encode.py  test_jwt_verify_encode.py
src/tests/unit/use_cases/: conftest.py
(+173 files in other folders)
